rns-lang/tests/snapshots/lexer-directives-semicolon_right_after_dot.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.method
    .;comment after semicolon
.end
----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/directives/semicolon_right_after_dot.ja:2:6 ]
   │
 2 │     .;comment after semicolon
   │      ┬  
   │      ╰── Unexpected character ';'
   │ 
   │ Note: Expected one of the directives: .class, .super, .method, .end, .limit
───╯
